--- a/app/src/main/res/layout/activity_team.xml
+++ b/app/src/main/res/layout/activity_team.xml
@@ -87,10 +87,16 @@
         android:layout_below="@+id/header"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_below="@android:id/list"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical"
+        android:layout_height="wrap_content">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@android:id/list"
+
         android:id="@+id/yourteam"
         android:text=" "
         android:layout_marginLeft="10dp" />
@@ -155,5 +161,5 @@
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp" />
 
-
+</LinearLayout>
 </RelativeLayout>
