--- a/app/src/main/res/layout/activity_scoreboard.xml
+++ b/app/src/main/res/layout/activity_scoreboard.xml
@@ -71,26 +71,42 @@
 
     </LinearLayout>
 
-
-
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@+id/header"
+        android:id="@+id/scroll"
+        android:fillViewport="true">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/layout1">
             <ListView
+                android:nestedScrollingEnabled="false"
                 android:scrollbars="none"
                 android:id="@android:id/list"
-                android:layout_below="@+id/header"
+                android:layout_gravity="top"
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="605dp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"/>
-<LinearLayout
-    android:layout_alignBottom="@android:id/list"
-    android:layout_width="wrap_content"
-    android:orientation="vertical"
-    android:layout_height="wrap_content">
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello"/>
-</LinearLayout>
+
+            <include
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                layout="@layout/row" />
+
+        </LinearLayout>
+
+        </LinearLayout>
+    </ScrollView>
 
 
-    </RelativeLayout>
+
+
+</RelativeLayout>
