--- a/app/src/main/res/layout/activity_team.xml
+++ b/app/src/main/res/layout/activity_team.xml
@@ -78,88 +78,109 @@
             android:layout_marginBottom="5dp" />
     </LinearLayout>
 
-
-    <ListView
-        android:scrollbars="none"
-        android:id="@android:id/list"
+    <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:layout_below="@+id/header"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_below="@android:id/list"
-        android:layout_alignParentBottom="true"
-        android:orientation="vertical"
-        android:layout_height="wrap_content">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/scroll"
+        android:fillViewport="true">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/layout1">
+                <ListView
+                    android:scrollbars="none"
+                    android:id="@android:id/list"
+                    android:layout_width="fill_parent"
+                    android:layout_height="360dp"
+                    android:layout_below="@+id/header"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"/>
 
-        android:id="@+id/yourteam"
-        android:text=" "
-        android:layout_marginLeft="10dp" />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:id="@+id/charitybox"
-        android:layout_below="@+id/yourteam"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_gravity="left"
-            android:layout_height="match_parent"
-            android:text="Select Charity"
-            android:layout_weight="1" />
-        <Spinner
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:entries="@array/charity"
-            android:id="@+id/charityspnr"
-            android:layout_weight="1"
-            android:layout_gravity="left" />
-    </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_below="@android:id/list"
+                    android:orientation="vertical"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:id="@+id/amountbox"
-        android:layout_below="@+id/charitybox"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="Amount"
-            android:layout_gravity="left"
-            android:layout_weight="1" />
-        <Spinner
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:entries="@array/amount"
-            android:id="@+id/amtspnr"
-            android:layout_weight="1"
-            android:layout_gravity="left" />
-    </LinearLayout>
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Pay"
-        android:layout_below="@+id/amountbox"
-        android:id="@+id/paybtn"
-        android:textStyle="bold"
-        android:textSize="20dp"
-        android:layout_gravity="center"
-        android:onClick="payButton"
-        android:background="@color/colorPrimaryDark"
-        android:textColor="#FFFFFF"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp" />
+                        android:id="@+id/yourteam"
+                        android:text=" "
+                        android:layout_marginLeft="10dp"
+                        android:textColor="@color/colorPrimary"
+                        android:paddingBottom="5dp"
+                        android:textStyle="bold" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:orientation="horizontal"
+                        android:id="@+id/charitybox"
+                        android:layout_below="@+id/yourteam"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_gravity="left"
+                            android:layout_height="match_parent"
+                            android:text="Select Charity"
+                            android:layout_weight="1" />
+                        <Spinner
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:entries="@array/charity"
+                            android:id="@+id/charityspnr"
+                            android:layout_weight="1"
+                            android:layout_gravity="left" />
+                    </LinearLayout>
 
-</LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:orientation="horizontal"
+                        android:id="@+id/amountbox"
+                        android:layout_below="@+id/charitybox"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginLeft="10dp">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:text="Amount"
+                            android:layout_gravity="left"
+                            android:layout_weight="1" />
+                        <Spinner
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:entries="@array/amount"
+                            android:id="@+id/amtspnr"
+                            android:layout_weight="1"
+                            android:layout_gravity="left" />
+                    </LinearLayout>
+                    <Button
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Pay"
+                        android:layout_below="@+id/amountbox"
+                        android:id="@+id/paybtn"
+                        android:textStyle="bold"
+                        android:textSize="20dp"
+                        android:layout_gravity="center"
+                        android:onClick="payButton"
+                        android:background="@color/colorPrimaryDark"
+                        android:textColor="#FFFFFF"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginTop="10dp" />
+                </LinearLayout>
+
+                </LinearLayout>
+
+        </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
