Everthing is completed except Google+ integration. Build apk & sending to client.

--- a/app/src/main/res/layout/activity_team.xml
+++ b/app/src/main/res/layout/activity_team.xml
@@ -106,7 +106,7 @@
                     android:layout_width="match_parent"
                     android:layout_below="@android:id/list"
                     android:orientation="vertical"
-                    android:layout_height="wrap_content">
+                    android:layout_height="match_parent">
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -166,11 +166,12 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Pay"
+
                         android:layout_below="@+id/amountbox"
                         android:id="@+id/paybtn"
                         android:textStyle="bold"
                         android:textSize="20dp"
-                        android:layout_gravity="center"
+                        android:layout_gravity="bottom"
                         android:onClick="payButton"
                         android:background="@color/colorPrimaryDark"
                         android:textColor="#FFFFFF"
